wrapper to use std::filesystem::path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,13 +23,13 @@ else()
 endif()
 
 if (${OSDIALOG_PLATFORM} STREQUAL windows)
-	add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_win.h osdialog_win.c)
+	add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_std.h osdialog_std.cpp osdialog_win.h osdialog_win.c)
 elseif (${OSDIALOG_PLATFORM} STREQUAL mac)
-	add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_mac.G)
+	add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_std.h osdialog_std.cpp osdialog_mac.G)
 elseif (${OSDIALOG_PLATFORM} STREQUAL gtk)
-	add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_gtk3.c)
+	add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_std.h osdialog_std.cpp osdialog_gtk3.c)
 elseif (${OSDIALOG_PLATFORM} STREQUAL zenity)
-	add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_zenity.c)
+	add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_std.h osdialog_std.cpp osdialog_zenity.c)
 else()
 	if (${OSDIALOG_PLATFORM})
 		message(FATAL_ERROR "osdialog platform ${OSDIALOG_PLATFORM} not supported or mispelled")
