set correct flags expected by other parts of cmake and cpp code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project(${MODULE_NAME} LANGUAGES CXX)
 set(OSDIALOG_PLATFORM_OVERRIDE "" CACHE STRING "Platform for osdialog: windows, gtk, mac, zenity")
 
 if(NOT CMAKE_SYSTEM_NAME STREQUAL "Android")
+	set(OSDIALOG_FOUND ON CACHE INTERNAL "")
 	if (EXISTS ${OSDIALOG_PLATFORM_OVERRIDE})
 		set(OSDIALOG_PLATFORM ${OSDIALOG_PLATFORM_OVERRIDE})
 	else()
@@ -40,4 +41,7 @@ if(NOT CMAKE_SYSTEM_NAME STREQUAL "Android")
 	endif()
 
 	target_include_directories(${MODULE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+	target_compile_definitions(${MODULE_NAME} PUBLIC LIB_OSDIALOG)
+else()
+	set(OSDIALOG_FOUND OFF CACHE INTERNAL "")
 endif()
