--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,15 @@ if(NOT CMAKE_SYSTEM_NAME STREQUAL "Android")
 	elseif (${OSDIALOG_PLATFORM} STREQUAL mac)
 		add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_std.h osdialog_std.cpp osdialog_mac.G)
 	elseif (${OSDIALOG_PLATFORM} STREQUAL gtk)
+        find_package(PkgConfig REQUIRED)
+        pkg_check_modules(GTK REQUIRED gtk+-3.0 IMPORTED_TARGET)
 		add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_std.h osdialog_std.cpp osdialog_gtk3.c)
+
+        if (NOT TARGET PkgConfig::GTK)
+            message(FATAL_ERROR "gtk2 library not found")
+        endif()
+
+        target_link_libraries(${MODULE_NAME} PRIVATE PkgConfig::GTK)
 	elseif (${OSDIALOG_PLATFORM} STREQUAL zenity)
 		add_library(${MODULE_NAME} osdialog.h osdialog.c osdialog_std.h osdialog_std.cpp osdialog_zenity.c)
 	else()
